kubernetes/apps/vcs/gitea-mirror/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea-mirror
spec:
  hostnames:
    - mirror.ringbell.cc
  parentRefs:
    - name: internal
      namespace: networking
  rules:
    - backendRefs:
        - name: gitea-mirror
          port: 4321
